package com.data_management;

import com.observer.IObserver;
import java.io.IOException;

public interface DataReader extends IObserver {
    /**
     * Reads data from a specified source and stores it in the data storage.
     * 
     * @param dataStorage the storage where data will be stored
     * @throws IOException if there is an error reading the data
     */
    void readData(DataStorage dataStorage) throws IOException;
}
